Importing databases of purchases and customers. Some basic/testing method added. (load data, add data)

--- a/App.config
+++ b/App.config
@@ -9,6 +9,7 @@
   </startup>
   <connectionStrings>
     <add name="ProductDatabaseEntities" connectionString="metadata=res://*/Model.ProductModel.csdl|res://*/Model.ProductModel.ssdl|res://*/Model.ProductModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-NOGH2UC;initial catalog=ProductDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ProductDatabaseEntitiesOfPurchases" connectionString="metadata=res://*/Model.PurchasesModel.csdl|res://*/Model.PurchasesModel.ssdl|res://*/Model.PurchasesModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-NOGH2UC;initial catalog=ProductDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
