--- a/packages.config
+++ b/packages.config
@@ -3,4 +3,9 @@
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="Fody" version="6.5.1" targetFramework="net472" developmentDependency="true" />
   <package id="PropertyChanged.Fody" version="3.4.0" targetFramework="net472" />
+  <package id="Spire.Doc" version="9.11.6" targetFramework="net472" />
+  <package id="Syncfusion.Compression.Base" version="19.3.0.53" targetFramework="net472" />
+  <package id="Syncfusion.DocIO.Wpf" version="19.3.0.53" targetFramework="net472" />
+  <package id="Syncfusion.Licensing" version="19.3.0.53" targetFramework="net472" />
+  <package id="Syncfusion.OfficeChart.Base" version="19.3.0.53" targetFramework="net472" />
 </packages>
