--- a/App.config
+++ b/App.config
@@ -8,8 +8,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-  
-  <add name="ProductDatabaseEntities" connectionString="metadata=res://*/Model.DatabaseModel.csdl|res://*/Model.DatabaseModel.ssdl|res://*/Model.DatabaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-NOGH2UC;initial catalog=ProductDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="ProductDatabaseEntities" connectionString="metadata=res://*/Model.DatabaseModel.csdl|res://*/Model.DatabaseModel.ssdl|res://*/Model.DatabaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-NOGH2UC;initial catalog=ProductDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
