--- a/FurnitureStoreApp.csproj
+++ b/FurnitureStoreApp.csproj
@@ -55,6 +55,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="View\CostumerListView.xaml.cs">
+      <DependentUpon>CostumerListView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\NewCostumerView.xaml.cs">
+      <DependentUpon>NewCostumerView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\StorageView.xaml.cs">
+      <DependentUpon>StorageView.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -67,6 +76,22 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Resources\DefaultStyle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\CostumerListView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\NewCostumerView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\StorageView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -97,7 +122,18 @@
   <ItemGroup>
     <Folder Include="Model\" />
     <Folder Include="Viewmodel\" />
-    <Folder Include="View\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\close.png" />
+    <Resource Include="Assets\close_MouseOver.png" />
+    <Resource Include="Assets\customer_button.png" />
+    <Resource Include="Assets\menu.png" />
+    <Resource Include="Assets\new_customer_button.png" />
+    <Resource Include="Assets\to_PDF_button.png" />
+    <Resource Include="Assets\to_PDF_button_MouseOver.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\storage.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
