--- a/packages.config
+++ b/packages.config
@@ -1,11 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ABCpdf" version="12.1.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="Fody" version="6.5.1" targetFramework="net472" developmentDependency="true" />
+  <package id="itext7" version="7.2.0" targetFramework="net472" />
+  <package id="itext7.commons" version="7.2.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net472" />
+  <package id="Portable.BouncyCastle" version="1.8.9" targetFramework="net472" />
   <package id="PropertyChanged.Fody" version="3.4.0" targetFramework="net472" />
   <package id="Spire.Doc" version="9.11.6" targetFramework="net472" />
   <package id="Syncfusion.Compression.Base" version="19.3.0.53" targetFramework="net472" />
   <package id="Syncfusion.DocIO.Wpf" version="19.3.0.53" targetFramework="net472" />
   <package id="Syncfusion.Licensing" version="19.3.0.53" targetFramework="net472" />
   <package id="Syncfusion.OfficeChart.Base" version="19.3.0.53" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
